# diffc

./: .gitignore  compress.py  decompress.py  environment.yml  evaluate.py  readme.md
configs/: Flux-base.yaml  SD-1.5-base.yaml  SD-1.5-prompt.yaml  SD-2.1-base.yaml  SDXL-base.yaml
lib/: blip.py  image_utils.py  metrics.py
lib/diffc/: decode.py  denoise.py  encode.py
lib/diffc/rcc/: chunk_coding.py  cuda_kernels.cu  gaussian_channel_simulator.py  pfr.py
lib/diffc/rcc/arithmetic-coding/: Cargo.toml
lib/diffc/rcc/arithmetic-coding/arithmetic-coding-core/src/: lib.rs
lib/diffc/rcc/arithmetic-coding/python-bindings/: Cargo.toml  pyproject.toml  setup.py
lib/diffc/rcc/arithmetic-coding/python-bindings/src/: lib.rs  zipf.rs
lib/diffc/rcc/arithmetic-coding/python-bindings/zipf_encoding/: __init__.py
lib/diffc/rcc/arithmetic-coding/src/: decoder.rs
lib/diffc/utils/: alpha_beta.py  p.py  q.py
lib/models/: Flux.py  SD.py  SD15.py  SD21.py  SDXL.py  latent_noise_prediction_model.py
lib/noise_prediction_models/: SD.py  SD15.py  SD21.py  SDXL.py  latent_noise_prediction_model.py
notebooks/: blip-prompts.ipynb
